minor css tweak fix horizontal scroll

--- a/src/stylesheets/_global.scss
+++ b/src/stylesheets/_global.scss
@@ -8,6 +8,7 @@ body {
   @include body-font;
   padding-top: 54px;
   color: $gray-600;
+  overflow-x: hidden;
 }
 @media (min-width: 992px) {
   body {
@@ -97,6 +98,12 @@ article {
   border-radius: 5px;
   border: none;
   box-shadow: 1px 1px 1px $primary;
+}
+
+@media (max-width: 992px) {
+  .sample-card {
+    width: 75%;
+  }
 }
 
 .gallery {
